# Stock-Prediction-System

./: .bash  .env.example  .gitignore  DATA_POPULATION_COMPLETE.md  Dockerfile  FUNDAMENTALS_DASHBOARD.md  IMPLEMENTATION_PLAN.md  NIFTY50_DATA_SUMMARY.md  PROGRESS_REPORT.md  QUICKSTART.md  README.md  docker-compose.prod.yml  docker-compose.yml  init-db.sql  nginx.conf  nohup.out  pyproject.toml  read.md  requirements.txt  test_db.py  test_db_direct.py  test_fundamentals_dashboard.py
.github/workflows/: ci.yml
config/: __init__.py  database.py  logging_config.py  settings.py
frontend/: eslint.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CandlestickChart.jsx  ErrorBoundary.jsx  FundamentalGauge.jsx  MetricCard.jsx  MiniChart.jsx  Navbar.jsx  RadarScore.jsx  SkeletonLoader.jsx
frontend/src/pages/: Dashboard.jsx  Fundamentals.jsx  News.jsx  Screener.jsx  Watchlist.jsx
frontend/src/services/: api.js
scripts/: fetch_all_data.py  fetch_fundamentals.py  fetch_news.py  init_db.py  migrate_fundamentals.py  quick_fetch_fundamentals.py
src/analysis/: fundamental_scorer.py
src/api/: main.py  routes.py
src/data_ingestion/: __init__.py  base.py  finnhub.py  marketaux.py  scheduler.py  yahoo_finance.py
src/database/: __init__.py  models.py  repository.py
src/features/: __init__.py  fundamental.py  pipeline.py  sentiment.py  technical.py
src/frontend/: README.md  __init__.py  app.py
src/frontend/pages/: fundamentals_dashboard.py
tests/: conftest.py  test_api.py
